--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".DashboardActivity"
-            android:label="@string/title_activity_main"
+            android:label="@string/title_dashboard"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -38,6 +39,10 @@
             android:name=".RepMax.Activity_RepMax_Main"
             android:label="@string/title_activity_main_repmax"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".BMI.Activity_BMI_Main"
+            android:label="@string/title_activity_main_bmi"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <provider
             android:name=".Profile.Implementation.ContentProvider.Provider"
@@ -45,6 +50,9 @@
         <provider
             android:name=".Exercise.Implementation.ContentProvider.Provider"
             android:authorities="com.codeflowcrafter.FitnessTrackerApp.ExerciseProvider" />
+        <provider
+            android:name=".BMI.Implementation.ContentProvider.Provider"
+            android:authorities="com.codeflowcrafter.FitnessTrackerApp.BmiProvider" />
     </application>
 
 </manifest>
