Added BMR basic implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
             android:name=".RestingHeartRate.Implementation.ContentProvider.Provider"
             android:authorities="com.codeflowcrafter.FitnessTrackerApp.RhrProvider" />
         <provider
-            android:name=".WeeklyActivityLevel.Implementation.ContentProvider.Provider"
+            android:name=".BMR.Implementation.ContentProvider.Provider"
             android:authorities="com.codeflowcrafter.FitnessTrackerApp.BmrProvider" />
     </application>
 
