--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
         <activity
             android:name=".ExerciseHeartRate.Activity_EHR_Main"
             android:label="@string/title_activity_main_ehr"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <provider
             android:name=".Profile.Implementation.ContentProvider.Provider"
@@ -69,6 +69,11 @@
         <provider
             android:name=".RepMax.Implementation.ContentProvider.Provider"
             android:authorities="com.codeflowcrafter.FitnessTrackerApp.RepMaxProvider" />
+
+        <activity
+            android:name=".RepMax.Activity_Repmax_Main"
+            android:label="@string/title_activity_main_repmax"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
